--- a/index.html
+++ b/index.html
@@ -75,12 +75,27 @@
       <div class="footer-content">
         <p>&copy; 2025 High Stage Festival. Todos os direitos reservados.</p>
         <div class="social-links">
-          <a href="#" aria-label="Instagram"
+          <a
+            href="https://www.instagram.com/p/DGQkjbBJ2Ql/"
+            target="_blank"
+            aria-label="Instagram"
             ><i class="fab fa-instagram"></i
           ></a>
-          <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-          <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
         </div>
+      </div>
+
+      <div style="text-align: center; margin-top: 20px">
+        <p>
+          Feito por
+          <a
+            href="https://www.instagram.com/felipe_teus/"
+            target="_blank"
+            aria-label="Instagram"
+          >
+            @felipe_teus
+          </a>
+          com muito amor ❤️
+        </p>
       </div>
     </footer>
 
